--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,10 @@ include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+linter:
+  rules:
+    avoid_print: true
+    prefer_const_constructors: true
+    sort_constructors_first: true
+    always_specify_types: true
